a rota de painel foi criada com sucesso

--- a/frontend/src/module.global.scss
+++ b/frontend/src/module.global.scss
@@ -13,9 +13,10 @@ body {
 
 :root{
     --fundo: #05040e;
+    --fundo-transparente: #05040eb6;
     --azul-800: #100C33;
     --azul-400: #372C99;
-    --azul-200: #655cb7;
+    --azul-200: #9089d1;
     --branco: #fff;
 }
 
