--- a/frontend/src/components/Header/style.scss
+++ b/frontend/src/components/Header/style.scss
@@ -1,3 +1,9 @@
+.BotaoDinamico{
+    position: absolute;
+    top: 2%;
+    left: 2%;
+    opacity: 0;
+}
 header{
     position: fixed;
     width: 200px;
@@ -27,6 +33,9 @@ header{
         padding-left: 0.5rem;
         transition: 0.5s;
 
+        .logoNav{
+            margin-right: 0.3rem;
+        } 
         &:hover{
             background-color: var(--azul-800);
             border-radius: 0.5rem;
@@ -50,5 +59,22 @@ header{
             background-color: var(--azul-800);
             border-radius: 0.5rem;
         }
+    }
+}
+
+@media screen and (max-width:720px){
+    header {
+        transition: 0.5s;
+        transform: translateX(-100vh);
+    }
+    .resposive_nav{
+        transform: none;
+    }
+    .BotaoDinamico{
+        color: var(--branco);
+        font-size: 1.5rem;
+        background-color: transparent;
+        border: 0;
+        opacity: 1;
     }
 }
