--- a/frontend/src/pages/Painel/style.scss
+++ b/frontend/src/pages/Painel/style.scss
@@ -73,14 +73,45 @@
     justify-content: center;
 
     .buttonDeAcao{
-        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
         width: 40%;
         margin: 0 1rem;
         height: 2rem;
         cursor: pointer;
 
-        border: 0;
+        border: none;
         color: var(--branco);
         font-weight: bold;
+
+        .iconBotaoAcao{
+            margin-right: 0.5em;
+        }
+    }
+}
+.vermelho {
+    background-color: #793838;
+    transition: 0.5s;
+    &:hover{
+        background-color: var(--branco);
+        border: 1px solid #793838;
+        color: #793838;
+    }
+}
+.verde {
+    background-color: #2b782b;
+    transition: 0.5s;
+    &:hover{
+        background-color: var(--branco);
+        border: 1px solid #2b782b;
+        color: #2b782b;
+    }
+}
+
+@media screen and (max-width:720px){
+    .ContainerLogado{
+        padding: 2.2rem 1rem;
     }
 }
