--- a/frontend/src/pages/Home/style.scss
+++ b/frontend/src/pages/Home/style.scss
@@ -68,3 +68,21 @@
         margin-top: 5px;
     }
 }
+
+@media screen and (max-width: 720px) {
+    .BaseLogin{
+        flex-direction: column-reverse;
+    }
+    .baseDeImgLogin{
+        width: 100%;
+        height: 100vh;
+        h1{
+            text-align: center;
+            font-size: 2rem;
+        }
+    }
+    .formLogin{
+        width: 100%;
+        padding-top: 10rem;
+    }
+}
