--- a/frontend/src/pages/Configuracao/style.module.scss
+++ b/frontend/src/pages/Configuracao/style.module.scss
@@ -3,3 +3,106 @@
     padding: 2rem 2rem 2rem 14rem;
     
 }
+
+.informacao{
+    width: 100%;
+    margin-top: 1rem;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column  ;
+    line-height: 2rem;
+    color: var(--branco);
+    h2{
+        color: var(--branco);
+        margin: 1rem 0;
+    }
+    img{
+        width: 200px;
+        border-radius: 50%;
+    }
+
+    #excluir{
+        max-width: 200px;
+        background-color: #ff0000;
+        &:hover{
+            background: transparent;
+            color: #F00000;
+            border: 1px solid #ff0000;
+        }
+    }
+}
+.containerExluirConta{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    h3{
+        color: var(--fundo);
+    }
+    div{
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+    }
+}
+#confimar{
+    color: var(--branco);
+    max-width: 200px;
+    background: #4e804e;
+
+    &:hover{
+        color: #4e804e;
+        background: transparent;
+        border: 1px solid #4e804e;
+    }
+}
+
+.FormAtualizacao{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    input{
+        margin-bottom: 1rem;
+    }
+    button{
+        max-width: 150px;
+    }
+
+    label{
+        width: 100%;
+        height: 280px;
+        margin-bottom: 1rem;
+        border-radius: 0.3rem;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        input{
+            display: none;
+        }
+        span{
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            color: var(--branco);
+            z-index: 99;
+            position: absolute;
+            opacity: 0.7;
+        }
+    }
+}
+
+.preview{
+    width: 15rem;
+    height: 15rem;
+    object-fit: fill;
+    border-radius: 50%;
+}
