--- a/frontend/src/pages/Configuracao/style.module.scss
+++ b/frontend/src/pages/Configuracao/style.module.scss
@@ -106,3 +106,9 @@
     object-fit: fill;
     border-radius: 50%;
 }
+
+@media screen and (max-width:720px){
+    .Container{
+        padding: 2.2rem 1rem;
+    }
+}
