criando a rota de excluir conta, corrigir o Footer da página

--- a/frontend/src/components/Footer/style.scss
+++ b/frontend/src/components/Footer/style.scss
@@ -1,6 +1,6 @@
 footer{
-    z-index: -1;
-    position: relative;
+    z-index: 1;
+    position: absolute;
     bottom: 1%;
     display: flex;
     justify-content: center;
