--- a/frontend/src/pages/Home/styles.module.scss
+++ b/frontend/src/pages/Home/styles.module.scss
@@ -12,3 +12,47 @@
         color: var(--branco)
     }
 }
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Informacao{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    flex-wrap: wrap;
+    margin-top: 1rem;
+    padding: 0 1rem;
+    color: var(--branco);
+}
+
+.card{
+    width: 300px;
+    border: 1px solid #939393;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 1rem;
+    border-radius: 1rem;
+    margin: 0.2rem;
+
+    .titulo{
+        font-size: 25px;
+        font-weight: bold;
+    }    
+    .imgServico{
+        font-size: 50px;
+        margin: 0.5rem 0;
+    }
+}
+
+@media screen and (max-width: 1280px){
+    .header{
+        flex-direction: column;
+    }
+}
