--- a/frontend/src/pages/Login/style.scss
+++ b/frontend/src/pages/Login/style.scss
@@ -69,6 +69,27 @@
     }
 }
 
+@media screen and (max-width: 1280px) {
+    .BaseLogin{
+        flex-direction: column-reverse;
+    }
+    .baseDeImgLogin{
+        width: 100%;
+        height: 100vh;
+        h1{
+            text-align: center;
+            font-size: 2rem;
+        }
+    }
+    .formLogin{
+        width: 100%;
+        padding-top: 10rem;
+        .Logo{
+            width: 190px;
+        }
+    }
+}
+
 @media screen and (max-width: 720px) {
     .BaseLogin{
         flex-direction: column-reverse;
